# squiggy-positron

./: .eslintrc.json  .gitattributes  .gitignore  .vscodeignore  ARCHITECTURE_UPDATE.md  BACKEND_API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  INVESTIGATION_REPORT.md  KNOWN_ISSUES.md  LICENSE  MIGRATION_TO_BOKEH.md  NEWS.md  PROGRESS.md  PYPI_README.md  README.md  README_EXTENSION.md  TASK.md  TESTING_STRATEGY.md  TEST_COVERAGE_PLAN.md  UX_WALKTHROUGH_SUMMARY.md  benchmark_bam_loading.py  benchmark_cache_performance.py  codecov.yml  coverage.json  eslint.config.mjs  jest.config.js  jest.setup.js  mkdocs.yml  package-lock.json  package.json  pixi.toml  pyproject.toml  requirements.txt  squiggy-positron-feature-120.code-workspace  squiggy.spec  test_server.py  tsconfig.jest.json  (+2 more)
.claude/: CLAUDE_CODE_WEB.md  README.md  quick-reference.md  settings.json  ui-suggestions.md
.claude/agents/: positron-api-auditor.md  positron-ux-reviewer.md
.claude/commands/: compile.md  docs.md  env-check.md  mkdocs.md  release.md  squiggy.md  test-web.md  test.md  worktree.md
.claude/hooks/: session-start
.github/: copilot-instructions.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  feature_request.md  ux_bug.md  ux_walkthrough.md
.github/workflows/: build.yml  docs.yml  latest-release.yml  publish-python.yml  release.yml  test.yml
coverage/: coverage-summary.json  file-commands.ts.html  index.html  lcov.info  squiggy-file-panel.ts.html  squiggy-motif-panel.ts.html  squiggy-plot-options-view.ts.html  squiggy-plot-panel.ts.html
coverage/backend/: index.html  package-manager.ts.html  positron-runtime-client.ts.html  squiggy-positron-runtime.ts.html  squiggy-python-backend.ts.html  squiggy-runtime-api.ts.html
coverage/commands/: file-commands.ts.html  index.html  plot-commands.ts.html  session-commands.ts.html  state-commands.ts.html
coverage/lcov-report/: file-commands.ts.html  index.html  squiggy-file-panel.ts.html  squiggy-motif-panel.ts.html  squiggy-plot-options-view.ts.html  squiggy-plot-panel.ts.html
coverage/listeners/: index.html  kernel-listeners.ts.html
coverage/services/: file-loading-service.ts.html  index.html
coverage/state/: extension-state.ts.html  file-resolver.ts.html  index.html  path-resolver.ts.html  session-state-manager.ts.html
coverage/utils/: error-handler.ts.html  format-utils.ts.html  index.html  webview-utils.ts.html
coverage/views/: base-webview-provider.ts.html  index.html  squiggy-file-panel.ts.html  squiggy-modifications-panel.ts.html  squiggy-motif-panel.ts.html  squiggy-plot-options-view.ts.html  squiggy-reads-view-pane.ts.html  squiggy-samples-panel.ts.html  squiggy-session-panel.ts.html
coverage/webview/: index.html  squiggy-plot-panel.ts.html
docs/: DEVELOPER.md  LOGGING.md  MANUAL_TESTING_GUIDE.md  MULTI_SAMPLE_COMPARISON.md  PHASE2_IMPLEMENTATION_GUIDE.md  PHASE3_PLAN.md  PYPI_README.md  REFERENCE_NAVIGATION_DESIGN.md  TSV_IMPORT_PROGRESS.md  UNIFIED_STATE_ARCHITECTURE.md  USER_GUIDE.md  UX_WALKTHROUGH.md  api.md  developer.md  development.md  index.md  installation.md  multi_sample_comparison.md  quick_reference.md  quickstart.md  usage.md  user_guide.md
docs/api/: alignment.md  api.md  core.md  index.md  modifications.md  normalization.md  plotting.md  utils.md
docs/archive/: PHASE1_DESIGN.md  PHASE2_COMPLETION_SUMMARY.md  PLOT_MODES_AUDIT.md  README.md  REFERENCE_NAVIGATION_DESIGN.md  TSV_IMPORT_FUTURE_DESIGN.md  issue-92-tasks.md
docs/guides/: LOGGING.md  MANUAL_TESTING_GUIDE.md  PYPI_README.md
docs/manuscript/: README.md  architecture-diagram.mmd  oup-template.typ  references.bib  squiggy-manuscript.typ
docs/overrides/: main.html
examples/: motif_analysis.ipynb  notebook_api_demo.ipynb  testing_testpypi.ipynb
examples/data/: make-gdna-example-data.sh
legacy/squiggy/: __init__.py  alignment.py  cli.py  constants.py  dialogs.py  normalization.py  ui_components.py  viewer.py
sample_data/: README.md
scripts/: check_dev_env.py  create_gdna_test_data.py  create_test_data.py  filter_reads.py  generate_docs_screenshots.sh  setup-test-workspace.sh  sync-version.js
squiggy/: __init__.py  alignment.py  api.py  base_annotation_renderer.py  cache.py  constants.py  export.py  io.py  logging_config.py  modification_track_builder.py  modifications.py  motif.py  normalization.py  plot_factory.py  plotter.py  plotting.py  theme_manager.py  utils.py
squiggy/data/: README.md  ecoli_trna.fa  ecoli_trna.fa.fai  ecoli_trna_tb_mappings.bam  ecoli_trna_tb_mappings.bam.bai  ecoli_trna_tb_reads.pod5  ecoli_trna_wt_mappings.bam  ecoli_trna_wt_mappings.bam.bai  ecoli_trna_wt_reads.pod5  yeast_trna_mappings.bam  yeast_trna_mappings.bam.bai  yeast_trna_reads.pod5
squiggy/io/: __init__.py  comparison.py  core.py  kernel.py  performance.py  samples.py
squiggy/plot_strategies/: __init__.py  aggregate.py  aggregate_comparison.py  base.py  delta.py  eventalign.py  overlay.py  reference_overlay.py  signal_overlay_comparison.py  single_read.py  stacked.py
squiggy/rendering/: __init__.py  (+4 more)
src/: extension.ts
test-workspace/: README.md
tests/: __init__.py  conftest.py  test_adapter_trimming.py  test_aggregate_comparison_strategy.py  test_aggregate_plotting.py  test_aggregate_strategy.py  test_alignment.py  test_api.py  test_base_annotation_renderer.py  test_bokeh_plotting.py  test_cache.py  test_cli.py  test_comparison_utils.py  test_constants.py  test_delta_plotting.py  test_eventalign_strategy.py  test_integration_modbam.py  test_io.py  test_main.py  test_modification_filtering.py  test_modification_track_builder.py  test_modifications.py  test_motif.py  test_motif_utils.py  test_multi_read_strategies.py  test_multi_sample.py  test_normalization.py  test_oo_api.py  test_phase2_comparison.py  test_phase3_delta.py  test_plot_coordinates.py  test_plot_factory.py  test_plot_strategies.py  test_plotting.py  test_plotting_base.py  test_plotting_base_annotations.py  test_plotting_eventalign.py  test_plotting_overlay.py  test_plotting_single.py  test_plotting_stacked.py  (+9 more)
(+245 files in other folders)
