[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squiggy"
version = "0.1.0"
description = "Nanopore squiggle visualization tool for POD5 files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jay Hesselberth", email = "jay.hesselberth@gmail.com"}
]
keywords = ["nanopore", "pod5", "squiggle", "visualization", "oxford-nanopore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pod5>=0.3.0",
    "PySide6>=6.5.0",
    "qasync>=0.24.0",
    "plotnine>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyinstaller>=5.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
squiggy = "squiggy.main:main"

[project.urls]
Homepage = "https://github.com/rnabioco/squiggy"
Repository = "https://github.com/rnabioco/squiggy"
Issues = "https://github.com/rnabioco/squiggy/issues"

[tool.setuptools]
packages = ["squiggy"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
squiggy = ["data/*.pod5", "data/*.png", "data/*.ico", "data/*.icns", "data/README.md"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
