[project]
name = "squiggy"
version = "0.1.5"
description = "Nanopore squiggle visualization tool for POD5 files"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jay Hesselberth", email = "jay.hesselberth@gmail.com" }]
keywords = ["nanopore", "oxford-nanopore", "pod5", "squiggle", "visualization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "bokeh>=3.1.1",
  "numpy>=1.20.0",
  "pod5>=0.3.0",
  "pysam>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/rnabioco/squiggy-positron"
Issues = "https://github.com/rnabioco/squiggy-positron/issues"
Repository = "https://github.com/rnabioco/squiggy-positron"

# No CLI entry point - use as library in Jupyter/Positron
# or via Positron extension

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.0.0",
  "jupyter>=1.0.0",  # For testing in notebooks
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
filterwarnings = [
  "ignore:Saving.*in image:UserWarning",
  "ignore:Filename.*BytesIO:UserWarning",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
packages = ["squiggy"]
# Using root squiggy/ package (extension version without Qt)
# Old Qt-based app is archived in legacy/squiggy/

[tool.setuptools.package-data]
squiggy = [
  "data/*.pod5",
  "data/*.png",
  "data/*.ico",
  "data/*.icns",
  "data/README.md"
]
